deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-app
  namespace: matomo
spec:
  selector:
    matchLabels:
      app: matomo-app
  template:
    metadata:
      labels:
        app: matomo-app
    spec:
      containers:
        - name: matomo-app
          image: matomo:4.13.1
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-db
  namespace: matomo
spec:
  selector:
    matchLabels:
      app: matomo-db
  template:
    metadata:
      labels:
        app: matomo-db
    spec:
      volumes:
      - name: matomodb-volume
        persistentVolumeClaim:
          claimName: matomodb-pvc
      containers:
        - name: matomo-db
          image: mariadb:10.9.4
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
          ports:
          - containerPort: 3306
            protocol: TCP
          volumeMounts:
          - mountPath: /var/lib/mysql
            name: matomodb-volume
