deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo-app-svc
  namespace: matomo
spec:
  selector:
    app: matomo-app
  ports:
  - name: matomo-app
    protocol: TCP
    port: 8000
    targetPort: 80
  type: NodePort
  
---

apiVersion: v1
kind: Service
metadata:
  name: matomo-db-svc
  namespace: matomo
spec:
  selector:
    app: matomo-db
  ports:
  - name: matomo-db
    protocol: TCP
    port: 3306
    targetPort: 3306
