deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo-ingress
  namespace: matomo
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  ingressClassName: public
  tls:
  - hosts:
    - analytics.wieru.com
    secretName: tls-secret
  rules:
  - host: analytics.wieru.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: matomo-app-svc
              port:
                number: 8000
